# UnixV6_BSD2

./: .gitignore  BUILD.md  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  build.sh  setup
.github/workflows/: ci.yml
compat/: retrofit.h
doc/: csh
doc/net/: netintro.n
doc/pascal/: csfix  pmon.out
doc/px/: pxin0.n
doc/pxp/: pxpin0.n
docs/: INSTALL.md  USAGE.md  install_full.md
man/: Mail.md  README.md  csh.md  finger.md  grep.md  ls.md  man.md  tset.md  vi.md
misc/: ar
scripts/: build_binaries.sh
src/: CMakeLists.txt
src/pi/: yylex.c
src/pxp/: yylex.c
tests/: harness.sh  run_tests.sh  test_expand.sh  test_head.sh  test_printenv.sh  test_whoami.sh
upgrade/src/: CMakeLists.txt
